packages/css/themes/src/common/structure.css
.nlux-AiChat-root {
    position: relative;
    display: flex;
    flex-direction: column;
    width: 100%;
    height: 100%;

    :is(h1, h2, h3, h4, h5, h6) {
        margin: 0;
        padding: 0;
    }

    > .nlux-comp-exceptionBox {
        position: absolute;
        z-index: 999999;
        top: 0;
        right: var(--nlux-chtr--brdrWd);
        left: var(--nlux-chtr--brdrWd);
        width: 100%;
    }

    > .nlux-chatRoom-container {
        position: relative;
        display: flex;
        flex-direction: column;
        flex-grow: 1;
        width: 100%;
        height: 100%;
        overflow: hidden;

        > .nlux-launchPad-container,
        > .nlux-conversation-container {
            /* position: absolute; */
            height: calc(100% - 60px);
          
        }

        > .nlux-composer-container {
            /* position: absolute; */
            height: 60px;
            width: 100%;
            flex: 0 0 auto;
            display: flex;
            flex-direction: row;
            align-items: stretch;

            > .nlux-comp-composer {
                width: 100%;
            }
        }
    }

    > .nlux-chatRoom-container.nlux-chatRoom-starting {
        > .nlux-conversation-container {
            display: none;
        }
    }

    > .nlux-chatRoom-container:not(.nlux-chatRoom-starting) {
        > .nlux-launchPad-container {
            display: none;
        }

        > .nlux-conversation-container {
            overflow-x: hidden;
            overflow-y: auto;
            flex: 1;
            padding: var(--nlux-chtr--pdng) var(--nlux-chtr--pdng) var(--nlux-dvr--mrgBtm) var(--nlux-chtr--pdng);

            > .nlux-conversationStarters-container:empty {
                display: none;
            }
        }
    }
}

